# open_vins

./: .gitmodules  CMakeLists.txt  ReadMe.md  setup.cfg  setup.py
ov_core/cmake/: ROS1.cmake  ROS2.cmake
ov_core/src/track/: TrackDescriptor.cpp  TrackDescriptor.h  TrackPython.cpp  TrackPython.h
ov_msckf/cmake/: ROS1.cmake
ov_msckf/src/core/: VioManager.h
ov_python_bindings/: CMakeLists.txt  ReadMe.md
ov_python_bindings/bindings/: cvbind.h  ndarray_caster.cpp  ndarray_caster.h  ov_core.cpp  test_bindings.cpp
ov_python_bindings/python/: TrackBase.py  main.py  openvins_config.py  render_camera.py  render_text.py  run_on_euroc.py  utils.py  viewer.py
